<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:src="@drawable/vrk_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:layout_below="@+id/imgLogo"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:hint="@string/mobile_num"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:padding="6dp"
        android:layout_below="@+id/etMobileNumber"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:padding="6dp"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:hint="@string/log_in"
        android:background="@color/black"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/txtForgotPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pwd"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:padding="6dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/txtRegisterYourself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_yourself"
        android:layout_centerHorizontal="true"
        android:padding="6dp"
        android:layout_alignParentBottom="true"
        android:textSize="16sp"
        android:layout_marginBottom="30dp"/>


</RelativeLayout>